[package]
name = "lntip"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
serde = "1.0.150"
rocket = { version = "0.5.0-rc.2", features = ["json"] }
tonic_openssl_lnd = "0.1.5"
hex = "0.4.3"

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.2"
features = ["handlebars"]
